--- a/less/discourse.less
+++ b/less/discourse.less
@@ -215,6 +215,10 @@ h2, h3 {
       background-color: @grey-primary;
     }
 
+    .timeline-footer-controls {
+      justify-content: flex-end;
+    }
+
     .timeline-controls, .timeline-footer-controls {
       button {
         margin-right: 0;
